[gd_scene format=4 uid="uid://xg0g0rjlglsa"]

[ext_resource type="Script" uid="uid://bktcnf5okqjm5" path="res://maps/map_placables/moving_platforms/moving_platforms.gd" id="1_hkjn8"]
[ext_resource type="Texture2D" uid="uid://sb0mxc1t8jsw" path="res://assets/temp assest/Dungeon Tile Set.png" id="2_pj3ga"]

[sub_resource type="Curve2D" id="Curve2D_el70e"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 259, 0)
}
point_count = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_14maj"]
texture = ExtResource("2_pj3ga")
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_right_corner = 0
1:5/0/terrains_peering_bit/bottom_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_right_corner = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/bottom_left_corner = 0
2:5/0/terrains_peering_bit/left_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/bottom_left_corner = 0
3:5/0/terrains_peering_bit/left_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_right_corner = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/top_side = 0
1:6/0/terrains_peering_bit/top_right_corner = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/bottom_right_corner = 0
2:6/0/terrains_peering_bit/bottom_side = 0
2:6/0/terrains_peering_bit/bottom_left_corner = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_left_corner = 0
2:6/0/terrains_peering_bit/top_side = 0
2:6/0/terrains_peering_bit/top_right_corner = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/bottom_left_corner = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_left_corner = 0
3:6/0/terrains_peering_bit/top_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/top_side = 0
1:7/0/terrains_peering_bit/top_right_corner = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/left_side = 0
2:7/0/terrains_peering_bit/top_left_corner = 0
2:7/0/terrains_peering_bit/top_side = 0
2:7/0/terrains_peering_bit/top_right_corner = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0/terrains_peering_bit/left_side = 0
3:7/0/terrains_peering_bit/top_left_corner = 0
3:7/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_sosmg"]
resource_local_to_scene = true
physics_layer_0/collision_layer = 0
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "test ground"
terrain_set_0/terrain_0/color = Color(0.09411765, 1, 0.8784314, 1)
sources/0 = SubResource("TileSetAtlasSource_14maj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olf2p"]
resource_local_to_scene = true
size = Vector2(128, 8)

[sub_resource type="Animation" id="Animation_e8ekl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n7wsl"]
resource_name = "back"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-1.55, -1.55),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_olf2p"]
resource_name = "default"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-1.56, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_qjxc4"]
resource_name = "front"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-1.56, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8ekl"]
_data = {
&"RESET": SubResource("Animation_e8ekl"),
&"back": SubResource("Animation_n7wsl"),
&"default": SubResource("Animation_olf2p"),
&"front": SubResource("Animation_qjxc4")
}

[node name="moving_platform" type="Path2D" unique_id=710403595]
curve = SubResource("Curve2D_el70e")
script = ExtResource("1_hkjn8")

[node name="PathFollow2D" type="PathFollow2D" parent="." unique_id=289665616]
rotates = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D" unique_id=574721292]
remote_path = NodePath("../../platform")

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="PathFollow2D" unique_id=360179121]
remote_path = NodePath("../../move_trigger")

[node name="platform" type="AnimatableBody2D" parent="." unique_id=247959146]
collision_layer = 2
collision_mask = 0

[node name="CHANGE THIS TO FIT THE PLATFORM" type="CollisionPolygon2D" parent="platform" unique_id=334858337]
polygon = PackedVector2Array(-64, -32, -64, 32, 64, 32, 64, -32)

[node name="platform" type="TileMapLayer" parent="platform" unique_id=1995284118]
modulate = Color(0.70980394, 0.68235296, 1, 1)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAABAAAAAAADAAcAAAABAP//AAADAAUAAAAAAAAAAAACAAcAAAAAAP//AAACAAUAAAD//wAAAAACAAcAAAD/////AAACAAUAAAD+/wAAAAABAAcAAAD+////AAABAAUAAAA=")
tile_set = SubResource("TileSet_sosmg")
use_kinematic_bodies = true

[node name="move_trigger" type="Area2D" parent="." unique_id=1286972824]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="move_trigger" unique_id=1628162647]
position = Vector2(0, -36)
shape = SubResource("RectangleShape2D_olf2p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1396996021]
libraries/ = SubResource("AnimationLibrary_e8ekl")

[connection signal="body_entered" from="move_trigger" to="." method="_on_move_trigger_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
